# FindBondRingsModifier

./: README.md  pyproject.toml
examples/: FindBondRingsModifierExample.ovito  RingFinderExample.ovito  graphene_gb.data  sphere.data
src/FindBondRingsModifier/: __init__.py
src/RingFinderModifier/: __init__.py
