[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FindBondRingsModifier"
version = "2023.1"
description = "[[Short description]]"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Constanze Kalcher", email = "kalcher@ovito.org"}]
maintainers = [{name = "OVITO GmbH", email = "support@ovito.org"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
    "networkx >= 3.1",
    "numpy >= 1.22",
]

[project.urls]
repository = "https://github.com/ckalcher/FindBondRingsModifier

[project.entry-points.'OVITO.Modifier']
"Ring Finder Modifier" = "FindBondRingsModifier:FindBondRingsModifier"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]